# er

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.fairroot  Doxyfile  README.md  actions.yml  entrypoint.sh  todo
BeamDet/: CMakeLists.txt  ERBeamDet.cxx  ERBeamDet.h  ERBeamDetCalibrator.cxx  ERBeamDetCalibrator.h  ERBeamDetCalibratorNew.cxx  ERBeamDetCalibratorNew.h  ERBeamDetDigitizer.cxx  ERBeamDetDigitizer.h  ERBeamDetLinkDef.h  ERBeamDetMWPCDigi.h  ERBeamDetMWPCPoint.cxx  ERBeamDetMWPCPoint.h  ERBeamDetPID.cxx  ERBeamDetPID.h  ERBeamDetPoint.cxx  ERBeamDetPoint.h  ERBeamDetReconstructor.cxx  ERBeamDetReconstructor.h  ERBeamDetSetup.cxx  ERBeamDetSetup.h  ERBeamDetTOFDigi.cxx  ERBeamDetTOFDigi.h  ERBeamDetTOFPoint.cxx  ERBeamDetTOFPoint.h  ERBeamDetTrackFinder.cxx  ERBeamDetTrackFinder.h
DSRD/: CMakeLists.txt  ERDSRD.cxx  ERDSRD.h  ERDSRDHitFinder.cxx  ERDSRDHitFinder.h  ERDSRDLinkDef.h  ERDSRDSetup.cxx  ERDSRDSetup.h
ERBase/: CMakeLists.txt  ERBaseLinkDef.h  ERDecayer.cxx  ERDecayer.h  ERDetector.cxx  ERMCApplication.cxx  ERMCApplication.h  ERRunSim.cxx
ERData/: CMakeLists.txt  ERDataLinkDef.h  ERDetectorList.h  ERLi10EventHeader.cxx  ERLi10EventHeader.h  ERLi10MCEventHeader.cxx  ERMCEventHeader.h  ERMCTrack.cxx  ERMCTrack.h  ERStack.cxx
ExpertData/: CMakeLists.txt  ERDetectorList.h  ERStack.cxx  ERStack.h  ExpertDataLinkDef.h  ExpertNeuRadLinkDef.h  R3BMCStack.cxx
Gadast/: CMakeLists.txt  ERGadast.cxx  ERGadast.h  ERGadastContFact.cxx  ERGadastContFact.h  ERGadastDigiPar.cxx  ERGadastDigiPar.h  ERGadastDigitizer.cxx  ERGadastDigitizer.h  ERGadastGeoPar.cxx  ERGadastGeoPar.h  ERGadastLinkDef.h  ERGadastMesh.cxx  ERGadastMesh.h  ERGadastSetup.cxx  ERGadastSetup.h
N15B11/: CMakeLists.txt  ERN15B11Detector.cxx  ERN15B11Detector.h  ERN15B11Digitizer.cxx  ERN15B11Digitizer.h  ERN15B11ElasticScattering.cxx  ERN15B11ElasticScattering.h  ERN15B11LinkDef.h  cppTokenizer.h
ND/: CMakeLists.txt  ERND.cxx  ERND.h  ERNDDigitizer.cxx  ERNDDigitizer.h  ERNDHitFinder.cxx  ERNDHitFinder.h  ERNDLinkDef.h  ERNDPID.cxx  ERNDPID.h  ERNDSetup.cxx  ERNDSetup.h  ERNDTrackFinder.cxx  ERNDTrackFinder.h
NeuRad/: CMakeLists.txt  ERNeuRad.cxx  ERNeuRad.h  ERNeuRadContFact.cxx  ERNeuRadContFact.h  ERNeuRadDigiAnalyser.cxx  ERNeuRadDigiAnalyser.h  ERNeuRadDigiPar.cxx  ERNeuRadDigiPar.h  ERNeuRadDigitizer.cxx  ERNeuRadDigitizer.h  ERNeuRadDigitizerD.cxx  ERNeuRadDigitizerD.h  ERNeuRadDigitizerFullMC.cxx  ERNeuRadDigitizerFullMC.h  ERNeuRadDigitizerTS.cxx  ERNeuRadDigitizerTS.h  ERNeuRadGeoPar.cxx  ERNeuRadGeoPar.h  ERNeuRadHitFinder.cxx  ERNeuRadHitFinder.h  ERNeuRadHitFinderMF.cxx  ERNeuRadHitFinderMF.h  ERNeuRadHitFinderWBT.cxx  ERNeuRadHitFinderWBT.h  ERNeuRadHitProducer.cxx  ERNeuRadHitProducer.h  ERNeuRadHitProducerMF.cxx  ERNeuRadHitProducerMF.h  ERNeuRadHitProducerWBT.cxx  ERNeuRadHitProducerWBT.h  ERNeuRadLinkDef.h  ERNeuRadMatcher.cxx  ERNeuRadMatcher.h  ERNeuRadPointAnalyser.cxx  ERNeuRadPointAnalyser.h  ERNeuRadSetup.cxx  ERNeuRadSetup.cxx_new  ERNeuRadSetup.h  ERNeuRadSetup.h_new  (+14 more)
RTelescope/: CMakeLists.txt  ERRTelescope.cxx  ERRTelescope.h  ERRTelescopeHitFinder.cxx  ERRTelescopeHitFinder.h  ERRTelescopeLinkDef.h  ERRTelescopeSetup.cxx  ERRTelescopeSetup.h
SensPlane/: CMakeLists.txt  ERSensPlane.cxx  ERSensPlane.h  ERSensPlaneLinkDef.h  ERSensPlanePoint.cxx  ERSensPlanePoint.h  README  README.md
base/: CMakeLists.txt  ERBaseLinkDef.h  ERDetector.cxx  ERDetector.h  ERDetectorContFact.cxx  ERDetectorContFact.h  ERDetectorGeoPar.cxx  ERDetectorGeoPar.h  ERDigitizer.cxx  ERDigitizer.h  ERElossCalculatorUtils.cxx  ERElossCalculatorUtils.h  ERGeoComponent.cxx  ERGeoComponent.h  ERGeoSubAssembly.cxx  ERGeoSubAssembly.h  ERMCApplication.cxx  ERMCApplication.h  ERRecoMCApplication.cxx  ERRecoMCApplication.h  ERRunAna.cxx  ERRunAna.h  ERRunSim.cxx  ERRunSim.h  ERSetup.cxx  ERSetup.h  ERSupport.cxx  ERSupport.h  ERTask.cxx  ERTask.h
beamtime/: CMakeLists.txt  ERBeamTimeCommon.h  ERBeamtimeLinkDef.h  ERDRS4Source.cxx  ERDRS4Source.h  ERDigiCleaner.cxx  ERDigiCleaner.h  ERDigibuilder.cxx  ERDigibuilder.h  ERLiCalibrator.cxx  ERLiCalibrator.h  ERNXyterAnalyzer.cpp  ERNXyterAnalyzer.h  ERNXyterCalibrator.cxx  ERNXyterCalibrator.h  ERNXyterTreeSource.cxx  ERNXyterTreeSource.h  ERRawToAnalyzeConverter.cxx  ERRawToAnalyzeConverter.h  ERRootSource.cxx  ERRootSource.h  ERRootSourceOld.cxx  ERRootSourceOld.h  ERSimtoRaw.cxx  ERSimtoRaw.h  ERSimtoWPT.cxx  ERSimtoWPT.h  ERTektronixSource.cxx  ERTektronixSource.h  ERpmtPixelMap.cxx  ERpmtPixelMap.h  simtorawold.cxx  simtorawold.h
data/: CMakeLists.txt  ERDataLinkDef.h  ERDecayMCEventHeader.cxx  ERDecayMCEventHeader.h  ERDetectorList.h  ERDigi.cxx  ERDigi.h  EREventHeader.cxx  EREventHeader.h  ERHe8EventHeader.cxx  ERHe8EventHeader.h  ERLi10EventHeader.cxx  ERLi10MCEventHeader.h  ERMCEventHeader.cxx  ERMCEventHeader.h  ERMCTrack.cxx  ERMCTrack.h  ERParticle.cxx  ERParticle.h  ERPoint.cxx  ERPoint.h  ERRawEvent.h  ERStack.cxx  ERTrack.cxx  ERTrack.h
decayers/: CMakeLists.txt  ER10Heto8HeEventHeader.cxx  ER10Heto8HeEventHeader.h  ERDecay.cxx  ERDecay.h  ERDecay10Heto8He.cxx  ERDecay10Heto8He.h  ERDecay26Oto24O2n.cxx  ERDecay26Oto24O2n.h  ERDecay27Fto26O.cxx  ERDecay27Fto26O.h  ERDecay30Arto28S2p.cxx  ERDecay30Arto28S2p.h  ERDecay31Arto30Ar.cxx  ERDecay31Arto30Ar.h  ERDecayEXP1803.cxx  ERDecayEXP1803.h  ERDecayEXP1811.cxx  ERDecayEXP1811.h  ERDecayLi9DetoLi10_Li9n_p.cxx  ERDecayLi9DetoLi10_Li9n_p.h  ERDecayer.cxx  ERDecayer.h  ERDecayersLinkDef.h  EREXP1811EventHeader.cxx  EREXP1811EventHeader.h  ERElasticScattering.cxx  ERElasticScattering.h  ERTextDecay.cxx  ERTextDecay.h
docker/: Dockerfile  Dockerfile.fairroot.17.04
docs/: Makefile  authors.rst  beamdet.rst  boxgenerator.rst  common.rst  conf.py  (+23 more)
(+1665 files in other folders)
